substrate/frame/support/test/tests/construct_runtime_v2_ui/missing_system_pallet.stderr
error: `System` pallet declaration is missing. Please add this line: `System: frame_system,`
 --> tests/construct_runtime_v2_ui/missing_system_pallet.rs:8:16
  |
8 |     pub struct Pallets {}
  |                ^^^^^^^
